# NarfDadasetGeneration

./: .gitignore  README.md
narf_place_recognition/: CMakeLists.txt  package.xml
narf_place_recognition/config/: sick_icp.yaml  test.yaml
narf_place_recognition/launch/: building.launch  day2loops.launch  example.launch  forestVelodyne.launch  test.launch
narf_place_recognition/misc/: readme.txt
narf_place_recognition/src/: Conversion.cpp  Conversion.hpp  DatasetGenerator.cpp  DatasetGenerator.hpp  Definitions.hpp  IcpOdometry.cpp  IcpOdometry.hpp  bag_to_dataset.cpp  dataset_to_stats.cpp  odom_correct.cpp  pcd_to_odom.cpp
narf_place_recognition/test/: ConversionTest.cpp  IcpOdometryTest.cpp  quick_test.cpp
